--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,11 @@
 * {
     box-sizing: border-box;
   }
+
+  body {
+    font-family: 'PT Serif', serif;
+    background-color: cornsilk;
+  }
   
   /* Style the search field */
   form.example input[type=text] {
@@ -8,14 +13,14 @@
     font-size: 17px;
     border: 1px solid grey;
     float: left;
-    width: 25%;
+    width: 75%;
     background: #f1f1f1;
   }
   
   /* Style the submit button */
   form.example button {
     float: left;
-    width: 5%;
+    width: 15%;
     padding: 5px;
     background: #2196F3;
     color: white;
@@ -34,4 +39,77 @@
     content: "";
     clear: both;
     display: table;
+  }
+
+
+  h1 {
+    text-align: center;
+    background-color: blue;
+    padding: 10px 10px 10px 10px;
+    color: white;
+  }
+
+  h4 {
+    margin-left: 5px;
+  }
+
+  
+
+  #city-stats {
+    border: 1px solid black;
+    width: 90%;
+    padding-left: 10px;
+    margin-bottom: 10px;
+    padding-top: 10px;
+  }
+
+  li {
+    list-style: none;
+   
+  }
+
+
+  #day1 {
+    border: 1px solid black;
+    width: 90%;
+    text-align: left;
+    background-color: blue;
+    color: white;
+    padding-left: 5px;
+  }
+
+  #day2 {
+    border: 1px solid black;
+    width: 90%;
+    text-align: left;
+    background-color: blue;
+    color: white;
+    padding-left: 5px;
+  }
+
+  #day3 {
+    border: 1px solid black;
+    width: 90%;
+    text-align: left;
+    background-color: blue;
+    color: white;
+    padding-left: 5px;
+  }
+
+  #day4 {
+    border: 1px solid black;
+    width: 90%;
+    text-align: left;
+    background-color: blue;
+    color: white;
+    padding-left: 5px;
+  }
+
+  #day5 {
+    border: 1px solid black;
+    width: 90%;
+    text-align: left;
+    background-color: blue;
+    color: white;
+    padding-left: 5px;
   }
